--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -1,1 +1,112 @@
 \chapter{Introduction}
+\par
+Modern information and communication technologies are widely used in almost every field.  It has also influenced the environmental science. Using the power of the new technologies, it is possible to create high quality models, simulations and decision support systems to help environmental scientists improve their research. Environmental modelling is the simplified view of the complex environmental realities. It represents the environmental objects, natural phenomena and physical processes in a logical way. It formalizes the principles of natural sciences to interpret the natural reality. Nowadays, modelling the complex environmental phenomena remains a great challenge. We need to consider the different dimensions and amount of data, structures of different sub components, scalability and adaptability of our models.
+\par
+These requirements have led to the development of different environmental modelling frameworks, such as CCA, ESMF, TIME, OMS, etc. These frameworks are implemented in general purpose languages, such as C, Java, Fortran, etc. They mostly provide application programming interfaces, which were specially implemented according to the needs of environmental modelling. They help the scientists to develop, adapt, reuse or integrate different models. However, they carry with them many kind of disadvantages. Software implementations of environmental models are seldom reused by broader communities or in different modelling frameworks, because of the poor semantic of the model interfaces. TODO quelle [3] In most cases, the models are only usable for a specific application. It is hard for other components to make use of the available models, because of the poor communication abilities of the models.
+\par
+To overcome the disadvantages of the available model frameworks, domain specific language brings about a lot of benefits. They offer appropriate domain specific syntax and notations, which allows user to describe a solution at the level of the abstraction of problem domain. It allows validation at the domain level. Environmental scientists can make the best use of the domain specific language, because it follows the domain abstractions and semantics as closely as possible. The build-in functions like analysis, verification, optimization, parallelization and  transformation allow the scientists to create reliable models with high quality and productivity, which are easy to maintain and distribute on another platforms.
+\par
+The following section describes the project goals which aims to solve these problems. Furthermore, the various features of the solution will be described in the TODO ref section vision for a dsl. After that the priorities of the project goals will be defined. TODO übergang passt nicht
+
+\section{Project Goals}
+\par
+The main goal of the project is a feasibility study for a more universal approach to describe environmental models. A domain specific language was proposed as a solution to this need. Although, a plain DSL will not be enough to solve all problems involved in describing an environmental model in such ways that it can be fully described and exchanged without additional information. The following features were defined by Athanasiadis [cite] as necessary for a language or system that allows to fully describe and exchange these environmental models.
+\begin{itemize}
+	\item Domain-specific data structures
+	\item Rich model interfaces    
+	\item DSL handling typical operations
+	\item Support for different modeling paradigms and frameworks
+	\item Account for modeling uncertainty    
+	\item Model transparency and defensibility of results 
+\end{itemize}
+The next section describes the DSL features in more detail.
+\section{Vision for a DSL}
+
+\subsection{Domain-speciﬁc data structures}
+\par
+Domain-speciﬁc data structures can be used by the modeler to semantically describe the following elements in the DSL.
+\begin{itemize}
+	\item    units and quantities
+	\item    accuracy
+	\item    spatial and temporal scales and extents
+	\item    quality and provenance information of data sources and results
+\end{itemize}
+\par
+The newly created models will consist of independent logical models and their observations. This is a novel approach, as it is a semantical representation of environmental data sets. In other words, the code for one entity is logically capsulated and separated from other entities.
+\par
+The main idea to achieve this, is to connect the DSL with specific environmental modelling ontologies, as these define the semantics of the environmental terminology.
+
+\subsection{Rich model interfaces}
+\par
+Rich model interfaces should allow the modeler to share their models in scientific workflows. Therefore the models must be enriched with the following metadata in machine-readable formats.
+\begin{itemize}
+	\item incorporating model assumptions
+	\item pre- and post- conditions
+	\item prerequisites for reuse
+\end{itemize}
+
+\subsection{DSL handling typical operations}
+\par
+To simplify the modelers work the DSL should be able to automate typical operations, among this:
+\begin{itemize}
+	\item scaling
+	\item averaging
+	\item interpolation
+	\item unit conversions
+\end{itemize}
+\par
+The language will be able to treat appropriately intensive and extensive quantities, for example by calculating the weighted mean when joining two intensive quantities.
+
+\subsection{Support for different modeling paradigms and frameworks}
+\par
+Athanasiadis proposed that the DSL should be paradigm agnostic and should also be able to be compatible to several frameworks. Nevertheless this point makes the development of the DSL very complex. Therefore a focus was set on the System Dynamics paradigm.
+
+\subsection{Account for modeling uncertainty}
+\par
+The model environment should be able to compute the modeling uncertainty and quality information. This should be achieved with confidence intervals, which solve different sources of uncertainty like:
+\begin{itemize}
+	\item random sampling error and biases
+	\item noisy or missing data
+	\item approximation techniques for equation
+\end{itemize}
+\par
+An example would be the standard error propagation. Two variables x and y are given, their mean and variance are represented by the following tuples (µx , σx ) and (µy , σy ). If their difference is calculated and saved in z, the mean and variance of z is automatically represented in the tuple  (µx − µy , σx + σy).
+\\
+Despite the importance of this feature, it was out of the scope of this project and no further investigations were made.
+
+\subsection{Model transparency and defensibility of results}
+One feature of the environment should be model transparency and defensibility  to explain the results of the model. This means that for each model output a history of operations on primal sources, enabled by the enrichment of metadata, must exist.
+
+\section{Priorities}
+\par
+After the first step of information gathering the group decided to organize these features by prioritisation and practicability to proof which goals are achievable in the given time.  
+The following order was defined:
+\subsection*{Priority 1:}
+\begin{itemize}
+	\item Domain-specific data structures
+	\item DSL definition with typical operations
+\end{itemize}
+\subsection*{Priority 2:}
+\begin{itemize}
+	\item  Rich model interfaces
+	\item  Model transparency and defensibility of results
+\end{itemize}
+\subsection*{Priority 3:}
+\begin{itemize}
+	\item Support for different modeling paradigms and frameworks
+	\item Account for modeling uncertainty
+\end{itemize}
+\par
+As a result of the lack of  modelling experience in general and especially the lack of experience with modeling environments it was not possible to implement a DSL that fulfills the above mentioned requirements immediately. The idea was to look at existing modelling frameworks in a first step and afterwards to implement lightweight and easy to understand models with these frameworks to gain experience in modeling on the one hand and to investigate them on strengths and weaknesses on the other hand. Based on this knowledge it should be much easier to define a DSL which integrates the required features. The next chapter gives a rough overview of existing modelling frameworks and examines its strengths and weaknesses regarding the needed features.
+
+
+
+
+
+
+
+
+
+
+
+
