switched to utf8

--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -22,9 +22,9 @@ The main goal of the project is a feasibility study for a more universal approac
 The next section describes the DSL features in more detail.
 \section{Vision for a DSL}
 
-\subsection{Domain-speciﬁc data structures}
+\subsection{Domain-specific data structures}
 \par
-Domain-speciﬁc data structures can be used by the modeler to semantically describe the following elements in the DSL.
+Domain-specific data structures can be used by the modeler to semantically describe the following elements in the DSL.
 \begin{itemize}
 	\item    units and quantities
 	\item    accuracy
