--- a/header.tex
+++ b/header.tex
@@ -32,11 +32,11 @@ includehead,includefoot
 \usepackage{varioref}
 \usepackage{url}
 
-%	Paket zum Übersetzen
+%	Paket zum Ãœbersetzen
 \usepackage[english]{babel}
 
 % Eingabe von Umlauten
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 
 %	Verwenden von T1 Fonts
 \usepackage[T1]{fontenc}
@@ -69,7 +69,7 @@ includehead,includefoot
  %numeric %authortitle-tcomp
 \bibliography{lib/libarchive}
 
-%Fußnoten durchlaufend nummerieren
+%FuÃŸnoten durchlaufend nummerieren
 \usepackage{chngcntr}
 \counterwithout{footnote}{chapter}
 
@@ -81,17 +81,17 @@ includehead,includefoot
 %\pagestyle{scrheadings}
 %\automark[section]{chapter}
 
-%-----------Abkürzungsverzeichnis---------------
+%-----------AbkÃ¼rzungsverzeichnis---------------
 
 \usepackage[intoc]{nomencl}
 % Befehl umbenennen in abk
 \let\abk\nomenclature
-% Deutsche Überschrift
-\renewcommand{\nomname}{Abkürzungsverzeichnis}
-% Punkte zw. Abkürzung und Erklärung
+% Deutsche Ãœberschrift
+\renewcommand{\nomname}{AbkÃ¼rzungsverzeichnis}
+% Punkte zw. AbkÃ¼rzung und ErklÃ¤rung
 \setlength{\nomlabelwidth}{.20\hsize}
 \renewcommand{\nomlabel}[1]{#1 \dotfill}
-% Zeilenabstände verkleinern
+% ZeilenabstÃ¤nde verkleinern
 \setlength{\nomitemsep}{-\parsep}
 \makenomenclature
 
@@ -111,7 +111,7 @@ includehead,includefoot
 
 \usepackage{enumitem}
 
-%------------Mü-einbinden----------
+%------------MÃ¼-einbinden----------
 
 \usepackage{textcomp}
 %
