solved problems with greek signs in Vision for a DSL

--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -70,7 +70,7 @@ The model environment should be able to compute the modeling uncertainty and qua
 	\item approximation techniques for equation
 \end{itemize}
 \par
-An example would be the standard error propagation. Two variables x and y are given, their mean and variance are represented by the following tuples (µx , σx ) and (µy , σy ). If their difference is calculated and saved in z, the mean and variance of z is automatically represented in the tuple  (µx − µy , σx + σy).
+An example would be the standard error propagation. Two variables $x$ and $y$ are given, their mean and variance are represented by the following tuples $(\mu x , \sigma x )$ and $(\mu y , \sigma y )$. If their difference is calculated and saved in $z$, the mean and variance of $z$ is automatically represented in the tuple  $(\mu x - \mu y , \sigma x + \sigma y)$.
 \\
 Despite the importance of this feature, it was out of the scope of this project and no further investigations were made.
 
