--- a/01_abstract.tex
+++ b/01_abstract.tex
@@ -1,1 +1,30 @@
-\chapter{Abstract}
+\chapter*{Executive Summary}
+\addcontentsline{toc}{chapter}{Executive Summary}
+\section*{The Problem}
+\par
+Environmental modelers and scientists are nowadays forced, to implement their model with standard programming languages. Since they are often not familiar with designing and handling large software projects and often with the programming itself, this is a very time consuming process. This leads to poor implemented models, that are inefficient, not stable and not exchangeable.
+\\
+Although there are already existing modeling environments that tries to cover this problem, most of them just provide a basic set of standard code fragments that takes away standard tasks like I/O handling from the modelers responsibility.
+
+\section*{The Vision}
+\par
+However the underlying and fundamental issue is left out. Modelers would and should care exclusively about their origin task the modeling itself. Owing to this, Athanasiadis provided us with a fundamentally novel idea of how the modeling process could be re-invited. The basic idea is to provide environmental scientists with a specially designed programming language, a domain specific language. Such a DSL, makes the implementation task much more comfortable and easier, since it allows the modeler to deal with well known domain constructs. Furthermore, such a DSL could be enhanced with a lot of sensible features that would even make the model implementation much easier and would lead to new functionality. The main question of this elaboration is, to figure out if this totally new vision is feasible in general. In order, we provide some basic ideas how this can be achieved.
+
+\section*{Possible Solutions}
+\par
+We propose that the best way to gain this vision is to provide the user with special integrated development environment for environmental modelling like they are known in the software development domain. This IDE must comprise a set of different tools that fulfill the requirements of the vision such as including semantic datatypes or rich model interfaces through metadata.
+\par
+Besides the description of that more overlooking idea, we have also examined some more specific approaches for the two main blocks, the definition of the DSL and how to integrate semantic aspects into the DSL. Regarding the first block, the definition of the DSL we have discussed several ideas and finally decided to take an already existing DSL, called Ocelet and provide a way how to extend it with the necessary features namely the usage of arrays, adding metadata through annotations and access to arbitrary timesteps.
+\par
+Furthermore we have worked out a very promising approach for the second block, the integration of semantic into DSL. We came to the conclusion, that the semantic should be defined in an Ontology, which then can be mapped into an object oriented model. This OOM can be used in the code generation phase of the DSL to build semantic aware code.
+
+\section*{Feasibility}
+\par
+After the examination we come to the conclusion that the general idea is feasible. We know, that there is a lot of open work to do, and that there will arise a lot of problems when trying to implement the worked out ideas. Hence missing knowledge and experience of the project team in this field, we think that it is out of our scope and possibility to assess how many and how difficult these upcoming problems are. However we are sure that an implementation would be a very time consuming, difficult and expensive undertaking. Due to the amount of open questions and unforeseeable problems an implementation could be risky. 
+
+
+
+
+
+
+
