--- a/header.tex
+++ b/header.tex
@@ -114,6 +114,9 @@ includehead,includefoot
 %------------Mü-einbinden----------
 
 \usepackage{textcomp}
+
+%---------Mathematische Mengen------
+\usepackage{amsfonts}
 %
 %	EOF
 %
