--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -16,10 +16,24 @@
 
 @online{dsl:ocelet-wiki,
 	title={OceletWiki},
-  author={Team Ocelet},
+  	author={Team Ocelet},
 	urldate={2013-03-19},
 	url={http://wiki.ocelet.fr/},
 	year={2011}
+}
+
+@article{dsl:ocelet-design,
+	title = "Design of a Domain Specific Language for modelling processes in landscapes ",
+	journal = "Ecological Modelling ",
+	volume = "220",
+	number = "24",
+	pages = "3527 - 3535",
+	year = "2009",
+	note = "<ce:title>Selected Papers on Spatially Explicit Landscape Modelling: Current practices and challenges</ce:title> ",
+	issn = "0304-3800",
+	doi = "10.1016/j.ecolmodel.2009.06.018",
+	url = "http://www.sciencedirect.com/science/article/pii/S030438000900413X",
+	author = "P. Degenne and D. Lo Seen and D. Parigot and R. Forax and A. Tran and A. Ait Lahcen and O. Curé and R. Jeansoulin"
 }
 
 @report{dsl:ocelet-doyouspeek,
@@ -27,3 +41,34 @@
 	author={P. Degenne, A. Ait Lahcen, O. Curé, R. Forax, D. Parigot, D. Lo Seen},
 	year={2010}
 }
+
+@article{dsl:mernik,
+	 author = {Mernik, Marjan and Heering, Jan and Sloane, Anthony M.},
+	 title = {When and how to develop domain-specific languages},
+	 journal = {ACM Comput. Surv.},
+	 issue_date = {December 2005},
+	 volume = {37},
+	 number = {4},
+	 month = dec,
+	 year = {2005},
+	 issn = {0360-0300},
+	 pages = {316--344},
+	 numpages = {29},
+	 url = {http://doi.acm.org/10.1145/1118890.1118892},
+	 doi = {10.1145/1118890.1118892},
+	 acmid = {1118892},
+	 publisher = {ACM},
+	 address = {New York, NY, USA},
+	 keywords = {Domain-specific language, application language, domain analysis, language development system},
+}
+
+@Manual{dsl:similie_tutorial_bank,
+	title = {Bank Account},
+	author = {Robert Muetzelfeldt}
+}
+@Unpublished{dsl:muetzelfeldt,
+	title = {Declarative modelling in ecological and environmental research.},
+	author = {Robert Muetzelfeldt},
+	year = 2004
+}
+
