--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -42,6 +42,22 @@
 	year={2010}
 }
 
+@inproceedings{dsl:ocelet-onto,
+ author = {Cur{\'e}, Olivier and Forax, R{\'e}mi and Degenne, Pascal and Seen, Danny Lo and Parigot, Didier and Lahcen, Ayoub Ait},
+ title = {Ocelet: An Ontology-Based Domain Specific Language to Model Complex Domains},
+ booktitle = {Proceedings of the 2010 Third International Conference on Communication Theory, Reliability, and Quality of Service},
+ series = {CTRQ '10},
+ year = {2010},
+ isbn = {978-0-7695-4070-2},
+ pages = {255--260},
+ numpages = {6},
+ url = {http://dx.doi.org/10.1109/CTRQ.2010.50},
+ doi = {10.1109/CTRQ.2010.50},
+ acmid = {1845710},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
 @article{dsl:mernik,
 	 author = {Mernik, Marjan and Heering, Jan and Sloane, Anthony M.},
 	 title = {When and how to develop domain-specific languages},
