added first part of conclusion

--- a/04_generation_of_a_dsl.tex
+++ b/04_generation_of_a_dsl.tex
@@ -177,6 +177,7 @@ In the next section, we describe therefore how Ocelet could be enhanced for our 
 \par
 As already described Ocelet has two main shortcomings, a focus on landscape modelling and a lack of semantic. Besides of these it also has a few minor shortcomings. The created model has no metadata, the use of nested arrays and more complex data structures is not clear and there could be some improvements to handle different timesteps. Possible solutions to these problems will be described in this section, whereas the problem with the semantics will be discussed in the next section.
 %TODO diskutieren des Rests und ebenfalls einfügen
+%TODO binding to ontos fehlt noch
 
 
 
