added hyperlinks and index

--- a/header.tex
+++ b/header.tex
@@ -117,6 +117,22 @@ includehead,includefoot
 
 %---------Mathematische Mengen------
 \usepackage{amsfonts}
+
+%--Index und Hyperlinks für Referenzen-------
+\usepackage[colorlinks,bookmarks]{hyperref}
+\hypersetup{
+	bookmarks=true,
+	colorlinks=true,
+	linkcolor=black,
+	anchorcolor=black,
+	citecolor=black,
+	filecolor=black,
+	menucolor=black,
+	pagecolor=black,
+	urlcolor=black,
+	pdfstartview=FitB 
+}
+
 %
 %	EOF
 %
