changed encoding of libarchive.bib to utf8

--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -1,5 +1,5 @@
 %
-%	Bibliotheksdatei für BiBTeX
+%	Bibliotheksdatei fÃ¼r BiBTeX
 %
 
 @report{dsl:ioannis,
@@ -9,7 +9,7 @@
 }
 
 @report{dsl:dynamo,
-	title={Simulation dynamischer Vorgänge zur \enquote{System Dynamics} - Methode und ihren Problemen},
+	title={Simulation dynamischer VorgÃ¤nge zur \enquote{System Dynamics} - Methode und ihren Problemen},
 	author={Claus Peter Ortlieb},
 	year={1987}
 }
@@ -33,12 +33,12 @@
 	issn = "0304-3800",
 	doi = "10.1016/j.ecolmodel.2009.06.018",
 	url = "http://www.sciencedirect.com/science/article/pii/S030438000900413X",
-	author = "P. Degenne and D. Lo Seen and D. Parigot and R. Forax and A. Tran and A. Ait Lahcen and O. Curé and R. Jeansoulin"
+	author = "P. Degenne and D. Lo Seen and D. Parigot and R. Forax and A. Tran and A. Ait Lahcen and O. CurÃ© and R. Jeansoulin"
 }
 
 @report{dsl:ocelet-doyouspeek,
 	title={Modelling the environment using graphs with behaviour: do you speak Ocelet?},
-	author={P. Degenne, A. Ait Lahcen, O. Curé, R. Forax, D. Parigot, D. Lo Seen},
+	author={P. Degenne, A. Ait Lahcen, O. CurÃ©, R. Forax, D. Parigot, D. Lo Seen},
 	year={2010}
 }
 
